--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 #link{
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 .i{
   
