--- a/style.css
+++ b/style.css
@@ -9,5 +9,16 @@
   
 }
 .link-b{
-
+text-decoration: none;
+  font-size: 1.2rem;
+  color: #333;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #333;
+  padding: 5px;
+  box-shadow: 0 0 5px #0004;
+  &:hover{
+    background-color: #333;
+    color: #eee;
 }
