--- a/style.css
+++ b/style.css
@@ -1,18 +1,47 @@
-.i{
-  font-size: 2rem;
-  color: #333;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap');
+
+body{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  min-height: 100vh;
+  margin: 0;
+  background-color: #eee;
+  font-family: 'Noto Sans JP' sans-serif;
 }
-.link-b{
-text-decoration: none;
-  font-size: 1.2rem;
-  color: #333;
+
+h1{
+  font-size: 2.5rem;
+}
+
+.link-btn{
+  font-size: 1.5rem;
+  color: transparent;             /*文字を透明にする*/
+    background-clip: text;          /*背景を文字で切り抜く*/
+    background-image: linear-gradient(45deg,
+        red,
+        orange,
+        yellow,
+        green,
+        aqua,
+        blue,
+        purple);
+    background-size: 1200%; 
+    animation: 4s linear 0s infinite alternate slide;  
+  text-decoration: none;
   border-radius: 5px;
   border-style: solid;
   border-width: 1px;
   border-color: #333;
-  padding: 5px;
-  box-shadow: 0 0 5px #0004;
-  &:hover{
-    background-color: #333;
-    color: #eee;
+  padding-inline: 1rem;
+}
+@keyframes slide { 
+    from { background-position: 0% 0%; } 
+    to { background-position: 100% 0%; }    /* 右から左へ移動するアニメーション */
+}
+#pdf-viewer{
+  width: 95vw;
+  height: calc(95vh - 2rem);
 }
